# impomero

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
auto_import/: annotation_job.py  importer_job.py
data/: add_users.sh  run_impomero.sh
data/raw/dir0/sub_dir1/: img1.tif  img2.tif
data/raw/dir0/sub_dir2/: img3.tif
data/tomls/: bad.toml  bad2.toml  file0.toml  file1.toml  file2.toml
impomero/: __main__.py  annotation_job.py  collector.py  db.py  importer_job.py  monitor.py
test_data/dir0/: file1.toml
test_data/dir0/sub_dir1/: img0.tif
test_data/dir0/sub_dir2/: img4.tif  test3.toml
test_data/dir1/: file2.toml
test_data/dir1/sub_dir1/subsub_dir/: img0.tif
tests/: conftest.py  populate_db.sh  test_annotation.py  test_collector.py  test_importer.py
tests/omero/: .env  add_users.sh  docker-compose.yml  run_impomero.sh
