[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = """\
        --docker-compose=tests/omero/docker-compose.yml \
        --docker-compose-remove-volumes \
        --docker-compose-remove-volumes\
"""
testpaths = ["tests",]

[tool.isort]
profile = "black"
