
[options]
packages = impomero
install_requires =
    omero-certificates
    omero-py
    toml
    zeroc-ice
    pandas
    watchdog
include_package_data = True

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-docker-compose
    black
    flake8
    pre-commit
ldap =
    ldap3

[flake8]
ignore = D203
max-line-length = 88
exclude =
    .git,
    __pycache__,
    old,
    build,
    dist
max-complexity = 10
