[metadata]
name = impomero
version = 0.2.0
author = "Guillaume Gay" <"guillaume@damcb.com">
download_url = https://github.com/centuri-engineering/impomero
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Operating System :: Unix
    Topic :: Database
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = impomero
install_requires =
    omero-certificates
    omero-py
    toml
    zeroc-ice
    pandas
    watchdog
include_package_data = True

[options.extras_require]
dev =
    pytest
    pytest-cov
    pytest-docker-compose
    black
    flake8
    pre-commit
ldap =
    ldap3

[flake8]
ignore = D203
max-line-length = 88
exclude =
    .git,
    __pycache__,
    old,
    build,
    dist
max-complexity = 10
